--- a/plugins/heidimarasigan/nltc/models/applications/fields.yaml
+++ b/plugins/heidimarasigan/nltc/models/applications/fields.yaml
@@ -668,7 +668,7 @@ fields:
         placeholder: DD/MM/YYYY
         default: '2016-06-01'
         required: 1
-        type: datepicker
+        type: customdatepicker
         comment: 'Available Dates:  June 1-2, 8-9, 15-16, 22-23, 29-30 /  July 6-7, 13-14, 20-21, 27-28 [Days: every Wednesdays and Thursdays only]'
     interview_time:
         label: 'heidimarasigan.nltc::lang.nltc.interview_time'
