--- a/sftp-config.json
+++ b/sftp-config.json
@@ -22,7 +22,7 @@
     "remote_path": "/public_html/v2/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
-        "sftp-settings\\.json", "/venv/", "\\.svv2/n/", "\\.hg/", "\\.git/",
+        "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
         "\\.bzr", "_darcs", "CVS", "\\.DS_Store", "Thumbs\\.db", "desktop\\.ini"
     ],
     //"file_permissions": "664",
