--- a/plugins/heidimarasigan/nltc/models/student/fields.yaml
+++ b/plugins/heidimarasigan/nltc/models/student/fields.yaml
@@ -1,8 +1,27 @@
-# ===================================
-#  Form Field Definitions
-# ===================================
-
 fields:
     id:
         label: ID
         disabled: true
+        type: text
+    user_id:
+        label: 'User ID'
+        disabled: true
+        type: text
+    student_code:
+        label: 'Student ID'
+        disabled: true
+        type: text
+    student_type:
+        label: 'Student Type'
+        oc.commentPosition: ''
+        options:
+            Regular: Regular
+            Irregular: 'Irregular (Students with incomplete subjects in their year level)'
+        span: full
+        type: radio
+    school_year:
+        label: 'School Year'
+        type: dropdown
+    level:
+        label: Level
+        type: relation
