--- a/plugins/heidimarasigan/nltc/controllers/students/config_reorder.yaml
+++ b/plugins/heidimarasigan/nltc/controllers/students/config_reorder.yaml
@@ -1,5 +1,4 @@
-title: Students
-modelClass: HeidiMarasigan\Nltc\Models\Students
-nameFrom: first_name
+title: Subjects
+modelClass: HeidiMarasigan\Nltc\Models\Student
 toolbar:
     buttons: reorder_toolbar
