--- a/plugins/heidimarasigan/nltc/controllers/students/config_list.yaml
+++ b/plugins/heidimarasigan/nltc/controllers/students/config_list.yaml
@@ -1,11 +1,44 @@
-title: Students
-modelClass: HeidiMarasigan\Nltc\Models\Student
+# ===================================
+#  List Behavior Config
+# ===================================
+
+# Model List Column configuration
 list: $/heidimarasigan/nltc/models/student/columns.yaml
-recordUrl: 'heidimarasigan/nltc/student/update/:id'
-noRecordsMessage: 'backend::lang.list.no_records'
+
+# Model Class name
+modelClass: HeidiMarasigan\Nltc\Models\Student
+
+# List Title
+title: Manage Students
+
+# Link URL for each record
+recordUrl: heidimarasigan/nltc/students/update/:id
+
+# Message to display if the list is empty
+noRecordsMessage: backend::lang.list.no_records
+
+# Records to display per page
+recordsPerPage: 20
+
+# Displays the list column set up button
 showSetup: true
-showCheckboxes: true
+
+# Displays the sorting link on each column
+showSorting: true
+
+# Default sorting column
+# defaultSort:
+#     column: created_at
+#     direction: desc
+
+# Display checkboxes next to each record
+# showCheckboxes: true
+
+# Toolbar widget configuration
 toolbar:
+    # Partial for toolbar buttons
     buttons: list_toolbar
+
+    # Search widget configuration
     search:
-        prompt: 'backend::lang.list.search_prompt'
+        prompt: backend::lang.list.search_prompt
