--- a/plugins/heidimarasigan/nltc/models/subject/fields.yaml
+++ b/plugins/heidimarasigan/nltc/models/subject/fields.yaml
@@ -18,4 +18,6 @@ fields:
     level:
         label: Level
         type: relation
+        emptyOption: -- Select Your Level --
+        nameFrom: title
         
