--- a/plugins/heidimarasigan/nltc/models/subject/fields.yaml
+++ b/plugins/heidimarasigan/nltc/models/subject/fields.yaml
@@ -20,4 +20,10 @@ fields:
         type: relation
         emptyOption: -- Select Your Level --
         nameFrom: title
-        
+
+    date:
+        label: Date
+        type: text
+
+
+  
