--- a/plugins/heidimarasigan/nltc/models/student/columns.yaml
+++ b/plugins/heidimarasigan/nltc/models/student/columns.yaml
@@ -15,7 +15,7 @@ columns:
         label: Student ID
         searchable: true
 
-    student_type:
+    type:
         label: Student Type
         searchable: true
 
